// Declare Spotless at the root with apply false so that the plugin is resolved by a single
// class loader. Without this, applying it independently in sibling subprojects causes a
// SpotlessTaskService conflict at configuration time.
plugins {
    id 'com.diffplug.spotless' apply false
}

allprojects {
    afterEvaluate {
        pluginManager.withPlugin('java') {
            java {
                toolchain {
                    languageVersion = JavaLanguageVersion.of(25)
                }
            }
        }
    }
}

subprojects {
    pluginManager.withPlugin('java') {
        dependencies {
            implementation platform('io.sentry:sentry-bom:8.36.0')
        }
    }
}

// Aggregate task in root project that runs checkstyleStaged in all subprojects
tasks.register("checkstyleStaged") {
    group = "verification"
    description = "Runs Checkstyle on staged files in all subprojects"

    dependsOn ":provider-data-e2e:checkstyleStaged",
              ":provider-data-service:checkstyleStaged"
}
